--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,18 @@ dependencies:
   json_annotation: ^4.4.0
   line_awesome_flutter: ^2.0.0
   flutter_svg: ^1.0.3
-  google_fonts: ^2.3.1
+  google_fonts: ^3.0.1
   provider: ^6.0.2
   intl: ^0.17.0
+  stream_chat_flutter: ^4.0.0
+  logger: ^1.1.0
+  image_gallery_saver: ^1.7.1
+  permission_handler: ^10.1.0
+  syncfusion_flutter_signaturepad: ^20.3.49
+  open_file: ^3.2.1
+  path_provider: ^2.0.6
+  pdf: ^3.8.3
+  image_picker: ^0.8.6
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -55,7 +64,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.0
 
 
 flutter_icons:
