--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   path_provider: ^2.0.6
   pdf: ^3.8.3
   image_picker: ^0.8.6
+  firebase_core: ^1.13.1
+  flutter_local_notifications: ^12.0.2
+  firebase_messaging: ^11.2.10
+  timezone: ^0.9.0
+  rxdart: ^0.27.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -86,6 +91,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/profile/
     - assets/
 
 
