--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   firebase_messaging: ^11.2.10
   timezone: ^0.9.0
   rxdart: ^0.27.4
+  agora_rtc_engine: ^5.2.0
+  agora_rtm: ^1.1.1
+  lints: '>=1.0.1 <2.1.0'
+
 
 
   # The following adds the Cupertino Icons font to your application.
