--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,8 +57,6 @@ dependencies:
   agora_rtm: ^1.1.1
   lints: '>=1.0.1 <2.1.0'
 
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -67,7 +65,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.1.4
-
+  flutter_launcher_icons: ^0.10.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -77,8 +75,9 @@ dev_dependencies:
 
 
 flutter_icons:
-  image_path: "assets/images/TeleIcon.png"
   android: true
+  ios: true
+  image_path: "assets/images/TeleIcon1.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
